<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview_genel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/general"
            android:textSize="18sp"
            android:textStyle="bold"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout_tema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@id/textview_genel">


            <TextView
                android:id="@+id/textview_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_choose_dialog"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textview_theme_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                tools:text="@string/Theme"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@id/linearLayout_tema">

            <TextView
                android:id="@+id/textview_language_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_change"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textview_language_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                tools:text="@string/tukce"
                android:textSize="12sp" />

        </LinearLayout>


        <View
            android:id="@+id/viewGeneral"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/eden"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearlayout_language" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-9758804960858015/3483529680"
            ads:layout_constraintBottom_toTopOf="@id/viewAdmob"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@id/viewGeneral"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/viewAdmob"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/eden"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adView" />


        <TextView
            android:id="@+id/textview_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/others"
            android:textSize="18sp"
            android:textStyle="bold"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@id/viewAdmob" />

        <LinearLayout
            android:id="@+id/linearlayout_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:orientation="vertical"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@id/textview_others">

            <TextView
                android:id="@+id/textview_versions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textview_verison_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/verison_number"
                android:textSize="11sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearlayout_deger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@id/linearlayout_version">

            <TextView
                android:id="@+id/textview_rate_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_us"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textview_rate_us_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/show_us_support"
                android:textSize="11sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearlayout_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@id/linearlayout_deger">


            <TextView
                android:id="@+id/textview_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textview_share_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/share_app"
                android:textSize="11sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>